--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,10 @@ jobs:
       - name: Build image
         run: |
           cd matlab-batch-image
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/matlab-batch:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/matlab-batch:${{ steps.semver.outputs.next }} .
+          docker build \
+            -t ${{ secrets.DOCKERHUB_USERNAME }}/matlab-batch:latest \
+            --build-arg MATLAB_RELEASE=r2024a \
+            -t ${{ secrets.DOCKERHUB_USERNAME }}/matlab-batch:${{ steps.semver.outputs.next }} .
 
       - name: Publish image
         run: docker push --all-tags ${{ secrets.DOCKERHUB_USERNAME }}/matlab-batch
