--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,37 +7,24 @@ on:
       - cron: "* */8 * * *" # Every 8 hours
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
+  build-matlab-batch-image:
+    uses: ./.github/workflows/action.yml
+    with: 
+      directory: "matlab-batch-image"
+      name: "matlab-batch"
 
-      - name: Get Next Version
-        id: semver
-        uses: ietf-tools/semver-action@v1
-        with:
-          token: ${{ github.token }}
-          branch: main
+  build-matlab-proxy-image:
+    uses: ./.github/workflows/action.yml
+    with: 
+      directory: "matlab-proxy-image"
+      name: "matlab-proxy"
 
-      - name: "Created tag"
-        run: echo "tag ${{ steps.semver.outputs.next }}"
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Build image
+      #   run: |
+      #     cd matlab-batch-image
+      #     docker build \
+      #       -t ${{ secrets.DOCKERHUB_USERNAME }}/matlab-batch:latest \
+      #       --build-arg MATLAB_RELEASE=r2024a \
+      #       -t ${{ secrets.DOCKERHUB_USERNAME }}/matlab-batch:${{ steps.semver.outputs.next }} .
 
-      - name: Build image
-        run: |
-          cd matlab-batch-image
-          docker build \
-            -t ${{ secrets.DOCKERHUB_USERNAME }}/matlab-batch:latest \
-            --build-arg MATLAB_RELEASE=r2024a \
-            -t ${{ secrets.DOCKERHUB_USERNAME }}/matlab-batch:${{ steps.semver.outputs.next }} .
-
-      - name: Publish image
-        run: docker push --all-tags ${{ secrets.DOCKERHUB_USERNAME }}/matlab-batch
 
